--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource-variable/onest": "^5.0.4",
     "astro": "^4.7.0",
+    "firebase-tools": "^13.7.5",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   }
