--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource-variable/onest": "^5.0.4",
     "astro": "^4.7.0",
     "firebase-tools": "^13.7.5",
+    "flowbite": "^2.3.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   }
